# rtic-minimal-sample

./: Cargo.toml
src/: main.rs
